changed the name

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "version": "1.0",
-    "name": "Leads tracker",
+    "name": "Faith's tracker",
     "action": {
         "default_popup": "index.html",
         "default_icon": "icon.png"
